--- a/index.html
+++ b/index.html
@@ -3,32 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
+    <title>Document</title>
 
     <style>
-        .label {
-            padding-right: 20px;
-        }
+    body{
+        color: var(--tg-theme-text-color);
+        background: var(--tg-theme-bg-color);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size: 18px;
+    }
+
+    .hint{
+        color: var(--tg-theme-hint-color);
+    }
+
+    .link{
+        color: var(--tg-theme-link-color);
+    }
+
+    .button{
+        background: var(--tg-theme-button-color);
+        color: var(--tg-theme-button-text-color);
+        border: none;
+        font-size: 18px;
+    }
+
+    .button:not(:last-child){
+        margin-bottom: 20px
+    }
+
+    #usercard{
+        text-align: center;
+    }
     </style>
 </head>
 <body>
-    <h1 class="h1" >Калькулатор LINOLIT</h1>
-
-    <label class="label">Площадь (m²): </label>
-    <input type="number" title="Площадь" value="0" id="area">
-    <br>
-    <br>
-    <label class="label">Толщина (мм): </label>
-    <input type="number" title="Толщина" value="0" id="thickness">
-    <br>
-    <br>
-    <label class="label">Цена камня (руб/кг): </label>
-    <input type="number" title="Цена камня" value="0" id="price_stone">
-    <br>
-    <br>
-    <label class="label">Цена грунта (руб/кг): </label>
-    <input type="number" title="Цена грунта" value="0" id="price_primer">
+    <div id="usercard"> <!--Карта профиля, человека, который к нам обратился-->
+    </div>
+    <p>Just text</p> <!--Просто текст для проверки-->
+    <a class="link" href="https://mihailgok.ru">Link</a> <!--Просто ссылка для проверки-->
+    <p class="hint">Some little hint</p> <!--Просто текст-подсказка для проверки-->
+    <button id="btn" class="button">Show/Hide Main Button</button> <!--Кнопка, чтобы скрыть / показать основную кнопку-->
+    <button id="btnED" class="button">Enable/Disable Main Button</button> <!--Кнопка, чтобы сделать кнопку активной/неактивной-->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="app.js"></script>
 </body>
-<script src="script.js"></script>
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
 </html>
