--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <h1 class="h1" >Калькулатор LINOLIT</h1>
+    <h1 class="h1" >Калькулятор Каменного ковра (без учета грунтования)</h1>
 
     <label class="label">Площадь (m²): </label>
     <input type="number" title="Площадь" value="0" id="area" class="input">
