--- a/index.html
+++ b/index.html
@@ -6,17 +6,43 @@
     <title>Document</title>
 
     <style>
-    body{
+    @font-face {
+        font-family: Roboto;
+        src: url(fRoboto-MediumItalic.ttf) format(ttf);
+    }
+
+    html {
+        background-image: url(bg_img.jpg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-attachment: fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        
+        font-family: 'Roboto', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, sans-serif;
+    }
+
+    body {
         color: var(--tg-theme-text-color);
         background: var(--tg-theme-bg-color);
         display: flex;
         flex-direction: column;
         align-items: center;
         font-size: 18px;
+        text-align: center;
     }
 
-    .input {
-        text-align: center;
+    .input { text-align: center; }
+
+    label {
+        background-color: white;
+        width: 175px;
+    }
+
+    h1 { 
+        background-color: white; 
     }
     </style>
 </head>
@@ -24,19 +50,19 @@
     <h1 class="h1" >Калькулятор Каменного ковра (без учета грунтования)</h1>
 
     <label class="label">Площадь (m²): </label>
-    <input type="number" title="Площадь" value="0" id="area" class="input">
+    <input type="number" title="Площадь" id="area" class="input">
     <br>
     <br>
     <label class="label">Толщина (мм): </label>
-    <input type="number" title="Толщина" value="0" id="thickness" class="input">
+    <input type="number" title="Толщина" id="thickness" class="input">
     <br>
     <br>
     <label class="label">Цена камня (руб/кг): </label>
-    <input type="number" title="Цена камня" value="0" id="price_stone" class="input">
+    <input type="number" title="Цена камня" id="price_stone" class="input">
     <br>
     <br>
     <label class="label">Цена грунта (руб/кг): </label>
-    <input type="number" title="Цена грунта" value="0" id="price_primer" class="input">
+    <input type="number" title="Цена грунта" id="price_primer" class="input">
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="script.js"></script>
