--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
     }
 
     .input { text-align: center; }
+
+    label {
+        background-color: white;
+        width: 175px;
+    }
+    h1 { 
+        background-color: white; 
+    }
     </style>
 </head>
 <body>
